Refactored code in supplier.service package using PMD tool.